Added static data (header/footer)
