# src/backend/routes/api_v1.php
@@ -11,3 +11,4 @@ Route::get('/user', function (Request $request) {
 Route::get('/', [MainController::class, 'index'])->name('home');
 Route::get('/quizzes', [MainController::class, 'quizzes'])->name('quizzes');
 Route::get('/events', [MainController::class, 'events'])->name('events');
+Route::get('/static', [MainController::class, 'static'])->name('static');
